--- a/QubicGo/Libraries/QuGo.Data/QuGo.Data.csproj
+++ b/QubicGo/Libraries/QuGo.Data/QuGo.Data.csproj
@@ -82,7 +82,18 @@
     <Compile Include="Mapping\Localization\LanguageMap.cs" />
     <Compile Include="Mapping\Localization\LocaleStringResourceMap.cs" />
     <Compile Include="Mapping\Localization\LocalizedPropertyMap.cs" />
+    <Compile Include="Mapping\Logging\ActivityLogMap.cs" />
+    <Compile Include="Mapping\Logging\ActivityLogTypeMap.cs" />
+    <Compile Include="Mapping\Logging\LogMap.cs" />
+    <Compile Include="Mapping\Security\AclRecordMap.cs" />
+    <Compile Include="Mapping\Security\PermissionRecordMap.cs" />
     <Compile Include="Mapping\SysEntityTypeConfiguration.cs" />
+    <Compile Include="Mapping\Users\UserAttributeMap.cs" />
+    <Compile Include="Mapping\Users\UserAttributeValueMap.cs" />
+    <Compile Include="Mapping\Users\UserMap.cs" />
+    <Compile Include="Mapping\Users\UserPasswordMap.cs" />
+    <Compile Include="Mapping\Users\UserRoleMap.cs" />
+    <Compile Include="Mapping\Users\ExternalAuthenticationRecordMap.cs" />
     <Compile Include="SysObjectContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryableExtensions.cs" />
