--- a/QubicGo/Libraries/QuGo.Services/packages.config
+++ b/QubicGo/Libraries/QuGo.Services/packages.config
@@ -5,4 +5,5 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.6" targetFramework="net471" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.6" targetFramework="net471" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net471" />
+  <package id="System.Linq.Dynamic" version="1.0.7" targetFramework="net471" />
 </packages>
