--- a/QubicGo/Libraries/QuGo.Services/packages.config
+++ b/QubicGo/Libraries/QuGo.Services/packages.config
@@ -1,9 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="4.8.1" targetFramework="net471" />
+  <package id="ImageResizer" version="4.2.5" targetFramework="net471" />
+  <package id="ImageResizer.Plugins.PrettyGifs" version="4.2.5" targetFramework="net471" />
+  <package id="MaxMind.Db" version="2.4.0" targetFramework="net471" />
+  <package id="MaxMind.GeoIP2" version="3.0.0" targetFramework="net471" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.6" targetFramework="net471" />
   <package id="Microsoft.AspNet.Razor" version="3.2.6" targetFramework="net471" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.6" targetFramework="net471" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net471" />
+  <package id="Microsoft.CSharp" version="4.4.1" targetFramework="net471" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net471" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net471" />
   <package id="System.Linq.Dynamic" version="1.0.7" targetFramework="net471" />
+  <package id="WindowsAzure.Storage" version="9.2.0" targetFramework="net471" />
 </packages>
