--- a/QubicGo/Presentation/QuGo.Web.Framework/QuGo.Web.Framework.csproj
+++ b/QubicGo/Presentation/QuGo.Web.Framework/QuGo.Web.Framework.csproj
@@ -99,8 +99,18 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HtmlExtensions.cs" />
+    <Compile Include="Localization\ILocalizedModel.cs" />
+    <Compile Include="Localization\ILocalizedModelLocal.cs" />
+    <Compile Include="Localization\LocalizedRoute.cs" />
+    <Compile Include="Localization\LocalizedRouteExtensions.cs" />
+    <Compile Include="Localization\LocalizedString.cs" />
+    <Compile Include="Localization\LocalizedUrlExtenstions.cs" />
+    <Compile Include="Localization\Localizer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UrlHelperExtensions.cs" />
     <Compile Include="UserLastActivityAttribute.cs" />
+    <Compile Include="ValidatePasswordAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Libraries\QuGo.Core\QuGo.Core.csproj">
